<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        style="@style/SignUp.EditText"
        android:id="@+id/signup_name_edit_text"
        android:hint="@string/signup_name_hint"/>

    <EditText
        style="@style/SignUp.EditText.Password"
        android:id="@+id/signup_password_edit_text"
        android:hint="@string/signup_password_hint"/>

    <Button
        style="@style/SignUp.Button"
        android:id="@+id/signup_button"
        android:text="@string/signup_signup"/>

    <TextView
        android:id="@+id/signup_state_text_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>