<resources>
    <string name="app_name">MCTDDDemo</string>

    <string name="main_title">Main Screen</string>

    <string name="signup_name_hint">Enter your name</string>
    <string name="signup_password_hint">Enter your password</string>
    <string name="signup_signup">Sign up</string>

    <string name="signup_signup_successful">Signup successful</string>
    <string name="signup_name_empty">Name has to be filled</string>
    <string name="signup_name_too_short">Name has to be at least 4 characters</string>

    <string name="signup_password_too_short">Password has to be at least 8 characters</string>

</resources>
